infra/cdk.out2/GennaiLlmStack.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/Resource"
   }
  },
  "VpcPublicSubnet1Subnet5C2D37C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet1/Subnet"
   }
  },
  "VpcPublicSubnet1RouteTable6C95E38E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "VpcPublicSubnet1RouteTableAssociation97140677": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet1DefaultRoute3DA9E72A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "VpcPublicSubnet1EIPD7E02669": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet1/EIP"
   }
  },
  "VpcPublicSubnet1NATGateway4D7517AA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcPublicSubnet1EIPD7E02669",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcPublicSubnet1DefaultRoute3DA9E72A",
    "VpcPublicSubnet1RouteTableAssociation97140677"
   ],
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "VpcPublicSubnet2Subnet691E08A3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet2/Subnet"
   }
  },
  "VpcPublicSubnet2RouteTable94F7E489": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet2Subnet691E08A3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet2DefaultRoute97F91067": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "VpcPrivateSubnet1Subnet536B997A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "VpcPrivateSubnet1RouteTableB2C5B500": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet1Subnet536B997A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet1DefaultRouteBE02A9ED": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "VpcPrivateSubnet2Subnet3788AAA1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "VpcPrivateSubnet2RouteTableA678073B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet2DefaultRoute060D2087": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/VPCGW"
   }
  },
  "VpcRestrictDefaultSecurityGroupCustomResourceC73DA2BE": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "Vpc8378EB38",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "988417841316"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:ap-northeast-1:988417841316:security-group/",
             {
              "Fn::GetAtt": [
               "Vpc8378EB38",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-988417841316-ap-northeast-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "InstanceSg4966687D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "vLLM inference server",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": "Allow NLB health checks and traffic",
      "FromPort": 8000,
      "IpProtocol": "tcp",
      "ToPort": 8000
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/InstanceSg/Resource"
   }
  },
  "InstanceRole3CCE2F1D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/InstanceRole/Resource"
   }
  },
  "VllmInstanceInstanceProfile947821F5": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "InstanceRole3CCE2F1D"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/VllmInstance/InstanceProfile"
   }
  },
  "VllmInstance1450DB6F": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/sda1",
      "Ebs": {
       "Encrypted": true,
       "VolumeSize": 200,
       "VolumeType": "gp3"
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "VllmInstanceInstanceProfile947821F5"
    },
    "ImageId": "ami-05dd54764582c58b0",
    "InstanceType": "g6e.xlarge",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "InstanceSg4966687D",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "VpcPrivateSubnet1Subnet536B997A"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "GennaiLlmStack/VllmInstance"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\n#!/bin/bash\nset -euxo pipefail\npip install -U pip\npip install vllm\ncat > /etc/systemd/system/vllm.service << 'EOF'\n[Unit]\nDescription=vLLM OpenAI-compatible server\nAfter=network.target\n\n[Service]\nType=simple\nUser=root\nEnvironment=\"HF_HOME=/opt/huggingface\"\nExecStart=/usr/local/bin/vllm serve openai/gpt-oss-20b --host 0.0.0.0 --port 8000 --served-model-name gpt-oss-20b --max-model-len 8192 --gpu-memory-utilization 0.90\nRestart=always\nRestartSec=10 [...]
    }
   },
   "DependsOn": [
    "InstanceRole3CCE2F1D"
   ],
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/VllmInstance/Resource"
   }
  },
  "NlbBCDB97FE": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     },
     {
      "Key": "load_balancing.cross_zone.enabled",
      "Value": "true"
     }
    ],
    "Scheme": "internal",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "NlbSecurityGroupC8F7EAB3",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "VpcPrivateSubnet1Subnet536B997A"
     },
     {
      "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
     }
    ],
    "Type": "network"
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Nlb/Resource"
   }
  },
  "NlbSecurityGroupC8F7EAB3": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB GennaiLlmStackNlb6A9C0A95",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Nlb/SecurityGroup/Resource"
   }
  },
  "NlbTcpListener202BE55F": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "VllmTg775381EC"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "NlbBCDB97FE"
    },
    "Port": 80,
    "Protocol": "TCP"
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/Nlb/TcpListener/Resource"
   }
  },
  "VllmTg775381EC": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 30,
    "HealthCheckPath": "/health",
    "HealthCheckPort": "8000",
    "HealthCheckProtocol": "HTTP",
    "HealthyThresholdCount": 2,
    "Port": 8000,
    "Protocol": "TCP",
    "TargetType": "instance",
    "Targets": [
     {
      "Id": {
       "Ref": "VllmInstance1450DB6F"
      },
      "Port": 8000
     }
    ],
    "UnhealthyThresholdCount": 3,
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/VllmTg/Resource"
   }
  },
  "LlmApiB20E600F": {
   "Type": "AWS::ApiGateway::RestApi",
   "Properties": {
    "ApiKeySourceType": "HEADER",
    "Description": "OpenAI-compatible LLM API with SSE Streaming (Response Streaming)",
    "EndpointConfiguration": {
     "Types": [
      "REGIONAL"
     ]
    },
    "Name": "gennai-llm-api"
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/Resource"
   }
  },
  "LlmApiDeploymentB9AB9BD53a75433d3c822839720aef2785c22720": {
   "Type": "AWS::ApiGateway::Deployment",
   "Properties": {
    "Description": "OpenAI-compatible LLM API with SSE Streaming (Response Streaming)",
    "RestApiId": {
     "Ref": "LlmApiB20E600F"
    }
   },
   "DependsOn": [
    "LlmApiproxyANY3C6CC8DC",
    "LlmApiproxy9430A34D",
    "LlmApiANY70A5624F",
    "LlmApiGET3821153B"
   ],
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/Deployment/Resource",
    "aws:cdk:do-not-refactor": true
   }
  },
  "LlmApiDeploymentStagev1623E07CC": {
   "Type": "AWS::ApiGateway::Stage",
   "Properties": {
    "DeploymentId": {
     "Ref": "LlmApiDeploymentB9AB9BD53a75433d3c822839720aef2785c22720"
    },
    "MethodSettings": [
     {
      "DataTraceEnabled": false,
      "HttpMethod": "*",
      "ResourcePath": "/*",
      "ThrottlingBurstLimit": 50,
      "ThrottlingRateLimit": 100
     }
    ],
    "RestApiId": {
     "Ref": "LlmApiB20E600F"
    },
    "StageName": "v1"
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/DeploymentStage.v1/Resource"
   }
  },
  "LlmApiproxy9430A34D": {
   "Type": "AWS::ApiGateway::Resource",
   "Properties": {
    "ParentId": {
     "Fn::GetAtt": [
      "LlmApiB20E600F",
      "RootResourceId"
     ]
    },
    "PathPart": "{proxy+}",
    "RestApiId": {
     "Ref": "LlmApiB20E600F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/Default/{proxy+}/Resource"
   }
  },
  "LlmApiproxyANY3C6CC8DC": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "ApiKeyRequired": true,
    "AuthorizationType": "NONE",
    "HttpMethod": "ANY",
    "Integration": {
     "ConnectionId": {
      "Ref": "VpcLink42ED6FF0"
     },
     "ConnectionType": "VPC_LINK",
     "IntegrationHttpMethod": "ANY",
     "RequestParameters": {
      "integration.request.path.proxy": "method.request.path.proxy"
     },
     "ResponseTransferMode": "STREAM",
     "Type": "HTTP_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "http://",
        {
         "Fn::GetAtt": [
          "NlbBCDB97FE",
          "DNSName"
         ]
        },
        "/{proxy}"
       ]
      ]
     }
    },
    "RequestParameters": {
     "method.request.path.proxy": true
    },
    "ResourceId": {
     "Ref": "LlmApiproxy9430A34D"
    },
    "RestApiId": {
     "Ref": "LlmApiB20E600F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/Default/{proxy+}/ANY/Resource"
   }
  },
  "LlmApiANY70A5624F": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "ApiKeyRequired": true,
    "AuthorizationType": "NONE",
    "HttpMethod": "ANY",
    "Integration": {
     "ConnectionId": {
      "Ref": "VpcLink42ED6FF0"
     },
     "ConnectionType": "VPC_LINK",
     "IntegrationHttpMethod": "ANY",
     "RequestParameters": {
      "integration.request.path.proxy": "method.request.path.proxy"
     },
     "ResponseTransferMode": "STREAM",
     "Type": "HTTP_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "http://",
        {
         "Fn::GetAtt": [
          "NlbBCDB97FE",
          "DNSName"
         ]
        },
        "/{proxy}"
       ]
      ]
     }
    },
    "RequestParameters": {
     "method.request.path.proxy": true
    },
    "ResourceId": {
     "Fn::GetAtt": [
      "LlmApiB20E600F",
      "RootResourceId"
     ]
    },
    "RestApiId": {
     "Ref": "LlmApiB20E600F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/Default/ANY/Resource"
   }
  },
  "LlmApiGET3821153B": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "ApiKeyRequired": false,
    "AuthorizationType": "NONE",
    "HttpMethod": "GET",
    "Integration": {
     "ConnectionId": {
      "Ref": "VpcLink42ED6FF0"
     },
     "ConnectionType": "VPC_LINK",
     "IntegrationHttpMethod": "GET",
     "Type": "HTTP_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "http://",
        {
         "Fn::GetAtt": [
          "NlbBCDB97FE",
          "DNSName"
         ]
        },
        "/"
       ]
      ]
     }
    },
    "ResourceId": {
     "Fn::GetAtt": [
      "LlmApiB20E600F",
      "RootResourceId"
     ]
    },
    "RestApiId": {
     "Ref": "LlmApiB20E600F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/Default/GET/Resource"
   }
  },
  "LlmApiGennaiApiKeyFC39BCA4": {
   "Type": "AWS::ApiGateway::ApiKey",
   "Properties": {
    "Description": "API Key for PoC access",
    "Enabled": true,
    "Name": "gennai-poc-key",
    "StageKeys": [
     {
      "RestApiId": {
       "Ref": "LlmApiB20E600F"
      },
      "StageName": {
       "Ref": "LlmApiDeploymentStagev1623E07CC"
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/GennaiApiKey/Resource"
   }
  },
  "LlmApiUsagePlanB943A844": {
   "Type": "AWS::ApiGateway::UsagePlan",
   "Properties": {
    "ApiStages": [
     {
      "ApiId": {
       "Ref": "LlmApiB20E600F"
      },
      "Stage": {
       "Ref": "LlmApiDeploymentStagev1623E07CC"
      },
      "Throttle": {}
     }
    ],
    "Quota": {
     "Limit": 10000,
     "Period": "DAY"
    },
    "Throttle": {
     "BurstLimit": 25,
     "RateLimit": 50
    },
    "UsagePlanName": "gennai-poc-plan"
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/UsagePlan/Resource"
   }
  },
  "LlmApiUsagePlanUsagePlanKeyResourceGennaiLlmStackLlmApiGennaiApiKeyBB2C9BCE5D251098": {
   "Type": "AWS::ApiGateway::UsagePlanKey",
   "Properties": {
    "KeyId": {
     "Ref": "LlmApiGennaiApiKeyFC39BCA4"
    },
    "KeyType": "API_KEY",
    "UsagePlanId": {
     "Ref": "LlmApiUsagePlanB943A844"
    }
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/LlmApi/UsagePlan/UsagePlanKeyResource:GennaiLlmStackLlmApiGennaiApiKeyBB2C9BCE"
   }
  },
  "VpcLink42ED6FF0": {
   "Type": "AWS::ApiGateway::VpcLink",
   "Properties": {
    "Description": "VPC Link to internal NLB for vLLM",
    "Name": "GennaiLlmStackVpcLink2E7D8737",
    "TargetArns": [
     {
      "Ref": "NlbBCDB97FE"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/VpcLink/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/9VXbWsjNxD+LaePQXGLKUfJt40TUlNfbJw00JpQxtrxWmetpOjFOXfxfy962fU6bg+OS8EFg6XRaOaZmWdG9nAw/OnnwY8f4NVesnJzKfhy0Dw4YBsKr/bPBtlw0DxptmhIDV+Kvyy5IheEEgnuDhy+wq6VWL+U6EZKrnjlDTiuJLlaNERCjUcqjzsdBDO/FJwRShgvzSewm6i0p1+5YfgWHJ5ced4/09FKPs1GNBl9iLcWDYEtcAFLLrjb/aFka3Wr2bjM62DqWii2yfsadDIy1lM5AS/Zmlw545ESrrcfR2/UwVpeybHefizK0qC1UzkymKPP8ZwFigikLO+7upGrBbkgz2cD8DxQJColAoXVXHmHj7AUeJAfZIW1ivFooFMOi9vxLHwdkk0zd9+dmSsQ9gxy/n0wzgfJmcBILBxLh0Zix6E04/KucA7Yukbp6AMyb7jb3 [...]
   },
   "Metadata": {
    "aws:cdk:path": "GennaiLlmStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "LlmApiEndpoint59C28A50": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "LlmApiB20E600F"
      },
      ".execute-api.ap-northeast-1.",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "LlmApiDeploymentStagev1623E07CC"
      },
      "/"
     ]
    ]
   }
  },
  "ApiEndpoint": {
   "Description": "API Gateway endpoint URL",
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "LlmApiB20E600F"
      },
      ".execute-api.ap-northeast-1.",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "LlmApiDeploymentStagev1623E07CC"
      },
      "/"
     ]
    ]
   }
  },
  "ApiKeyId": {
   "Description": "API Key ID (retrieve value with: aws apigateway get-api-key --api-key <id> --include-value)",
   "Value": {
    "Ref": "LlmApiGennaiApiKeyFC39BCA4"
   }
  },
  "InstanceId": {
   "Description": "EC2 Instance ID (connect via SSM Session Manager)",
   "Value": {
    "Ref": "VllmInstance1450DB6F"
   }
  },
  "TestCommand": {
   "Description": "Test commands",
   "Value": {
    "Fn::Join": [
     "",
     [
      "# 1. Get API Key value:\n#    aws apigateway get-api-key --api-key ${API_KEY_ID} --include-value --query 'value' --output text\n# 2. Test chat completions (SSE Streaming):\n#    curl -N https://",
      {
       "Ref": "LlmApiB20E600F"
      },
      ".execute-api.ap-northeast-1.",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "LlmApiDeploymentStagev1623E07CC"
      },
      "/v1/chat/completions \\\n#      -H 'Content-Type: application/json' \\\n#      -H 'x-api-key: <YOUR_API_KEY>' \\\n#      -d '{\"model\":\"gpt-oss-20b\",\"messages\":[{\"role\":\"user\",\"content\":\"Hello\"}],\"stream\":true}'"
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
